contact spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -495,9 +495,10 @@ main {
     min-height: 450px;
     width: 100%;
 }
+
 .input-container p {
     font-size: 16px;
-    text-align: left;
+    text-align: center;
     color: #ffffff;
 }
 
@@ -533,6 +534,7 @@ input, textarea {
 
 aside {
     flex: 2;
+    align-self: center;
 }
 section {
     flex: 2;
